# fardad_test

./: manage.py  pyproject.toml  pytest.ini
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/tests/: test.py
ghoghnous/: asgi.py  settings.py  urls.py  wsgi.py
