[tool.poetry]
name = "fardad-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
djangorestframework = "^3.14.0"
setuptools = "^69.0.3"
drf-yasg = "^1.21.7"
pytest-django = "^4.7.0"
model-bakery = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
